--- a/replays-web/src/markup/index.html
+++ b/replays-web/src/markup/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>A place to store your League of Legends replay files.</title>
-    <link rel="stylesheet" href="./build/app.css" />
+    <link rel="stylesheet" href="./public/app.css" />
   </head>
   <body>
     <section id="container"></section>
-    <script type="text/javascript" src="./build/app.js"></script>
+    <script type="text/javascript" src="./public/app.js"></script>
   </body>
 </html>
