--- a/replays-web/index.html
+++ b/replays-web/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>A place to store your League of Legends replay files.</title>
-    <link rel="stylesheet" href="./static/app.css" />
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <section id="container"></section>
