fix file downloading

--- a/replays-web/index.html
+++ b/replays-web/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <section id="container"></section>
-    <script type="text/javascript" src="./static/app.js"></script>
+    <script type="text/javascript" src="/static/app.js"></script>
   </body>
 </html>
